```mermaid
erDiagram
    jugador ||--|| estadisticas_jugador : tiene
    pista }o--|| tipo_pista : tiene
    pista ||--o{ reserva : tiene
    usuario ||--o{ reserva : hace
    reserva ||--o{ partida : incluye
    partida ||--o{ turno : tiene
    turno }o--|| jugador : pertenece_a
    reserva ||--o{ cafeteria : accede
    cafeteria }o--o{ menu : ofrece
    cafeteria ||--o{ pedido : recibe
    jugador ||--o{ jugador_partida : participa
    partida ||--o{ jugador_partida : incluye
    pedido ||--o{ detalle_pedido : contiene
    cliente ||--|{ usuario : tiene
    cliente ||--o{ pedido : hace
    detalle_pedido ||--o{ menu : incluye    
    detalle_pedido }o--|| cliente : pertenece_a
    menu ||--o{ comida : incluye

    estadisticas_jugador {
        string id_estadistica PK
        string id_jugador FK
        int partidas_jugadas
        float promedio_puntaje
        int total_strikes
        int total_spares
    }

    usuario {
        string id_usuario PK
        string id_cliente FK
        string nombre_usuario
        string email
        datetime fecha_creacion
        boolean activo
    }

    pista {
        string id_pista PK
        int capacidad_maxima
        string estado
        string id_tipo_pista FK
    }

    tipo_pista {
        string id_tipo_pista PK
        string tipo
        string zona
        float precio
        float descuento
        string descripcion
    }

    cafeteria {
        string id_cafeteria PK
        string nombre
        string ubicacion
        time horario_apertura
        time horario_cierre
        int capacidad_maxima
        string email
        string telefono
    }

    menu {
        string id_menu PK
        string nombre
        string descripcion
        float precio
    }

    comida {
        string id_comida PK
        string nombre
        string descripcion
        float precio
    }

    pedido {
        string id_pedido PK
        date horario
        float precio_total
        string id_reserva FK
        string id_cafeteria FK
        string id_cliente FK
    }

    detalle_pedido {
        string id_detalle_pedido PK
        string id_pedido FK
        string id_menu FK
        int cantidad
        float subtotal
        string id_cliente FK
    }

    cliente {
        string id_cliente PK
        string nombre
        string direccion
        string telefono
        string email
    }

    reserva {
        string id_reserva PK
        date fecha
        time hora
        string id_usuario FK
        string id_pista FK
        string estado
        float precio_total
    }

    partida {
        string id_partida PK
        string id_pista FK
        string id_reserva FK
        time duracion
    }

    jugador {
        string id_jugador PK
        string nombre
        int edad
        string email
    }    

    jugador_partida {
        string id_jugador_partida PK
        string id_jugador FK
        string id_partida FK
        int puntaje_final
        int posicion
    }

    turno {
        int id_turno PK
        int numero_turno
        int lanzamiento1
        int lanzamiento2
        int lanzamiento3         
        int puntaje_turno
        int bonus
        boolean strike
        boolean spare
        boolean falta1
        boolean falta2
        boolean falta3      
        boolean frame_final
        string id_partida FK
        string id_jugador_partida FK
    }
